--- a/.env
+++ b/.env
@@ -1,8 +1,13 @@
-DB_HOST=ruby.db.elephantsql.com
-DB_PORT=5432
-DB_USER=sdoxgpid
-DB_PASSWORD=Q_VPYZYMC02vMDTByqhIbkRGHVE8QDiW
-DB_NAME=sdoxgpid
 #Telegram__Token
-TELEGRAM_BOT_TOKEN=DO_NOT_USE_THIS_VALUE._INSTEAD_CREATE_A_COMPLEX_SECRET_AND_KEEP_IT_SAFE_OUTSIDE_OF_THE_SOURCE_CODE.
+TELEGRAM_BOT_TOKEN=6905089804:AAGXY0FCK986AoZU1cJri5djFsIAT8gbZqE
 
+
+
+# This was inserted by `prisma init`:
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
+DATABASE_URL="postgresql://postgres:ESSEXessex01091999@localhost:5432/marketing_report?schema=public"
