--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,8 @@
 {
+  "trailingComma": "none",
+  "tabWidth": 2,
+  "useTab": true,
+  "semi": true,
   "singleQuote": true,
-  "trailingComma": "all"
+  "arrowParens": "avoid" 
 }
