--- a/package.json
+++ b/package.json
@@ -23,16 +23,16 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.0",
     "@nestjs/core": "^10.0.0",
-    "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.3.0",
     "@nestjs/typeorm": "^10.0.2",
+    "@prisma/client": "^5.17.0",
     "@tma.js/init-data-node": "^1.3.0",
     "@types/passport-jwt": "^4.0.1",
+    "date-fns": "^3.6.0",
     "passport": "^0.7.0",
-    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
@@ -45,7 +45,6 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
-    "@types/multer": "^1.4.11",
     "@types/node": "^20.3.1",
     "@types/passport-local": "^1.0.38",
     "@types/supertest": "^2.0.12",
@@ -60,6 +59,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
+    "prisma": "^5.17.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
